<resources>
    <string name="app_name">ConversorDeMoedas</string>
    <string name="valor_em_real">Qual o valor em real? </string>
    <string name="valor_em_dolar">Valor em Dolar: </string>
    <string name="valor_em_euro">Valor em Euro: </string>
    <string name="valor_dolar">$0,00 </string>
    <string name="valor_euro">€0.00</string>
    <string name="calcular">Calcular</string>
</resources>
